code/tui/src/app/snapshots/app__interaction_flow_tests__recovered_conversation_draft.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: "render(&restored, 80, 20)"
---
  .                                                        [— / —] [Dashboard]













  ⏸ ask permissions on
  ────────────────────────────────────────────────────────────────────────────
  > conversation draft
  ─────────────────────────────────────────────────────────── Automatic model

  Enter send  ·  shift+tab mode  ·  alt+r effort
