code/tui/src/app/snapshots/app__interaction_flow_tests__unknown_slash_command_fullscreen.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]

● Unknown command: /confg. Did you mean /config?











  ⏸ Manual
  ────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────── Automatic model

  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
